# Rsty_decajing_jingle

./: .gitignore  Cargo.toml  README.md  main.txt
Archive/: D_main.rs  audio_handling.rs  file_handling.rs  lib.rs  main.rs
Help from people/Links/: Help in rust with std--fs, stdio, memory management and workign with large directories - learnprogramming.url  Help with std--fs, stdio, memory management) - rust.url  High Assurance Rust - High Assurance Rust- Developing Secure and Robust Software.url
Help from people/Pics/: Thumbs.db
config/: RstyConfig_cfg.json
database/: rsty_jingle.db
src/: D_main.rs  Thumbs.db  audio.rs  audio_handling.rs  file_handling.rs  gui.rs  lib.rs  main.rs  opint.rs  sql.rs  「Nightcore」→ Kids (Remix) ✕(M4A_128K).m4a  「Nightcore」→ Pulsedriver - Cambodia (Black Noize _ Cortez Bootleg) ✘(M4A_128K)_1.m4a
