[package]
name = "music_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.15.0"
eframe = "0.18.0"
egui_extras = {path = "/home/lenz/.cargo/registry/src/github.com-1ecc6299db9ec823/egui_extras-0.18.0", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0.139", features = ["derive"] }